--- a/_posts/2019-12-30-the-us-narrative-today.html
+++ b/_posts/2019-12-30-the-us-narrative-today.html
@@ -1611,107 +1611,107 @@ stories:
   domain: http://www.mendotareporter.com/
   link: https://mendotareporter.com/article/opportunity-for-local-authors-at-princeton-library
 images:
-- name: white-house-whitehouse-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-alberto-giacometti.jpg
-- name: server-racks-door.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-door.jpg
-- name: dc-statue-dcstatue-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-deep-connections.jpg
-- name: eduardo-eduardo-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-hot-spicy.jpg
-- name: oldcabin-oldcabin-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-purp-paper.jpg
-- name: aws-s3-stories-new-27-93-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-27-93-800-500-0-max-0--1--1.jpg
-- name: stalin-time-train-station-cloud.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-train-station-cloud.jpg
-- name: old-house-oldhouse-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-colorful-blocks.jpg
-- name: old-cabin-oldcabin-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-matrix.jpg
-- name: death-valley-death-valley-national-park-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-yellow-collage.jpg
-- name: razorcliff-razorcliff-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-internet-numbers.jpg
-- name: nazi-invasion-london-underground-covent-garden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-london-underground-covent-garden.jpg
-- name: machine-road-machine-road-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-free-woman.jpg
-- name: beach-clouds-lifeguard-beachclouds-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-yellow-paper.jpg
-- name: stories-new-76-135-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-76-135-800-500-0-max-0-1--1.jpg
-- name: ellis-island-ellisisland-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-mucha-mult.jpg
-- name: old-cabin-oldcabin-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-colorful-dream.jpg
-- name: oldtrain-oldtrain-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-blue-circuit.jpg
-- name: dragon-desert-desert-dragon-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-horiz-circuit.jpg
-- name: old-barn-old-barn-1500-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-dark-soul.jpg
-- name: oldhouse-oldhouse-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-blue-electricity.jpg
-- name: dragon-desert-desert-dragon-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-emily-carr.jpg
-- name: bf-skinner-surveillance-3-camers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-surveillance-3-camers.jpg
-- name: bf-skinner-sub-way-bart-going-by.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-sub-way-bart-going-by.jpg
-- name: rain-princess-city-clouds-building-crowded.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-city-clouds-building-crowded.jpg
-- name: old-cabin-oldcabin-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-sand-paper.jpg
-- name: castle-wall-DSC-0067-gred-mash.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-gred-mash.JPG
-- name: aws-s3-stories-redes-fast-flux-623x425-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-redes-fast-flux-623x425-blue-electricity.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-rainbow-festival.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-spagetti-accident.jpg
-- name: oldhouse-granaryfield-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-kand-two.jpg
-- name: mediterranean-mediterranean-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-monet-one.jpg
-- name: bf-skinner-water-fountain-many-shooting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-water-fountain-many-shooting.jpg
-- name: copper-circuit-walk-through-garden-tunnel.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-walk-through-garden-tunnel.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-gan-vogh.jpg
-- name: yosemite-yosemite-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-internet-numbers.jpg
-- name: server-racks-clouds-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-clouds-dark-dali.jpg
-- name: scream-IMG_7319.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_7319.jpg
-- name: rain-princess-castle-on-the-hill-windows.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-castle-on-the-hill-windows.jpg
-- name: border-fence-border-fence-on-hill-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-wols.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-yellow-collage.jpg
-- name: hollywood-building-hollywood-building-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-blue-brush.jpg
-- name: mosaic-face-mosaic-face-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-blue-circuit-3.jpg
-- name: abandonedbuildings_internet_numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_internet_numbers.jpg
-- name: supreme-court-supremecourt-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-blue-circuit.jpg
-- name: fence-fence-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-blue-brush.jpg
-- name: stalin-time-cannon_36556797762_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-cannon_36556797762_o.jpg
-- name: sand-hand-sand-hand-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-constitution.jpg
-- name: oldhouse-oldhouse-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-kandinsky-bv.jpg
-- name: braceros-domingo-ulloa-frosty-downtown-lights.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-frosty-downtown-lights.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-blue-circuit.jpg
+- name: beach-rocks-beach-rocks-currents-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-blue-circuit-3.jpg
+- name: server-cloud-server-racks-door-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-blue-circuit-3.jpg
+- name: capital-battle-capitolbattle-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-far-away.jpg
+- name: nazi-invasion-castle-on-the-hill-windows.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-castle-on-the-hill-windows.jpg
+- name: stories-4882162452-fa3126b38d-b-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-4882162452-fa3126b38d-b-aqua.jpg
+- name: stories-new-69-120-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-69-120-800-500-0-max-0-1--1.jpg
+- name: old-school-house-old-schoolhouse-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-copper-circuit-2.jpg
+- name: paris-paris-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-constitution.jpg
+- name: old-granary-field-oldhouse-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-neo-instinct.jpg
+- name: crow-crow-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-oily-mcoilface.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dali-three.jpg
+- name: gears-4882162452-fa3126b38d-b-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-dali-three.jpg
+- name: sand-hand-sand-hand-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-sunday.jpg
+- name: window-window-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-plentiful.jpg
+- name: catacombs-catacombs-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-dark-rain.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-smoking-cigarette.jpg
+- name: nazi-invasion-butterfly-purple-flower.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-butterfly-purple-flower.jpg
+- name: downtown-trucksilo-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-cinnamon-rolls.jpg
+- name: oldhouse-oldhouse-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-creativity.jpg
+- name: abandonedbuildings_crafty_painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_crafty_painting.jpg
+- name: rain-princess-IMG_7831.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7831.jpg
+- name: cargo-ship-cargo-ship-on-sea-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-copper-circuit-2.jpg
+- name: abe-lincoln-one-space-pizza-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-space-pizza-file-00-00-15-87.jpg
+- name: dragon-desert-desert-dragon-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-ww2-dresden.jpg
+- name: san-francisco-street-view-san-francisco-street-view-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-dark-dali.jpg
+- name: gypsy-wagon-gypsywagon-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-yellow-paper.jpg
+- name: nazi-invasion-downtown-125thstreet.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-downtown-125thstreet.jpg
+- name: carry-load-carryload-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-wols.jpg
+- name: nazi-invasion-stainless-tree-sun-ray.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-stainless-tree-sun-ray.jpg
+- name: berlinwall2-berlinwall-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-ww2-color.jpg
+- name: blossombar-clean-view-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-clean-view-file-00-00-50-62.jpg
+- name: gears-4882162452-fa3126b38d-b-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-internet-numbers.jpg
+- name: lincoln-memorial-lincolnmemorial-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-far-away.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-purple-storm.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-purple-storm.png
+- name: dragon-desert-desert-dragon-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-far-away.jpg
+- name: copper-circuit-city-waterfront-path.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-city-waterfront-path.jpg
+- name: aws-s3-stories-new-79-110-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-79-110-800-500-0-max-0--5--1.jpg
+- name: copper-circuit-british-sgtreet-phone-booth.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-british-sgtreet-phone-booth.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-dali-three.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-dali-three.png
+- name: fast-lights-freeway-redes-fast-flux-623x425-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-dark-rain.jpg
+- name: copper-circuit-small-lighthouse_36556509232_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-small-lighthouse_36556509232_o.jpg
+- name: ellis-island-ellisisland-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-sand-paper.jpg
+- name: san-francisco-street-view-san-francisco-street-view-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-purp-paper.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-purp-paper.jpg
+- name: border-fence-border-fence-on-hill-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-colorful-dream.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-mucha-mult.jpg
+- name: fence-mexico-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-sand-paper.jpg
+- name: copper-circuit-small-town-street-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-small-town-street-2.jpg
+- name: copper-circuit-lighthouse_36679514616_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-lighthouse_36679514616_o.jpg
+- name: statue-of-liberty-front-view-statueofliberty-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-purple-storm.jpg
+- name: school-clouds-church-clouds-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-blue-circuit.jpg
 ---
 An Intrepid Distillery Brings Unfettered Style To The Local Spirits Scene.&nbsp;Lady Leopards Fall In Conference Hoops Hosting Mena.&nbsp;Former Deputy Apprehended By Police.&nbsp;Badgers' Chris Orr Poised For Big Finish In Rose Bowl.&nbsp;Plane Crashes Near Western Airport.&nbsp;With Garrett In Limbo, Cowboys Facing Roster Choices As Well.&nbsp;Union Names Seniors Of The Month For November.&nbsp;Here's How Much A Pound Of Bacon Cost The Year You Were Born.&nbsp;
